# Aura

./: .gitignore  .gitmodules  README.md
AuraEngine/src/: Aura.cpp  Aura.h  AuraAPI.h  AuraLogger.cpp  AuraLogger.h  AuraWindow.cpp  AuraWindow.h  DGPU.h  Globals.h
AuraEngine/src/ARenderer/: ARenderer.cpp  ARenderer.h
AuraEngine/src/AShader/: AShaderManager.cpp  AShaderManager.h
AuraEngine/src/Entity/: AEntityManager.cpp  AEntityManager.h  Entitiy.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
AuraEngine/src/Entity/Components/: ABaseComponent.h  AComponent.h  AComponentHelper.cpp  AComponentHelper.h  AMaterialComponent.cpp  AMaterialComponent.h  ATransformComponent.cpp  ATransformComponent.h
AuraEngine/src/Entity/Meshes/: CubeMesh.cpp  CubeMesh.h  Meshes.h  MeshesManager.cpp  MeshesManager.h  SphereMesh.cpp  SphereMesh.h
AuraEngine/src/Entity/Objects/: ABaseObject.cpp  ABaseObject.h  ACubeObject.cpp  ACubeObject.h  ASphereObject.cpp  ASphereObject.h  CubeObject.cpp  CubeObject.h
AuraEngine/src/Scene/: ASceneManager.cpp  ASceneManager.h  Scene.cpp  Scene.h
AuraEngine/src/Vendors/: glad.c
AuraEngine/src/shaders/: basic.frag  basic.vert
MinecraftClone/: Block.h  CMakeLists.txt  Camera.h  Chunk.cpp  Chunk.h  Main.cpp  SimplexNoise.h  World.cpp  World.h  build.bat
SandBox/: Main.cpp
Vendors/include/glad/: glad.h
